--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
